plugins {
    alias(libs.plugins.androidApplication)
//    id("kotlin-kapt") apply  true
    id("realm-android") apply true
}

android {
    namespace = "com.mfrf.dawdletodo"
    compileSdk = 34

    defaultConfig {
        applicationId = "com.mfrf.dawdletodo"
        minSdk = 34
        targetSdk = 34
        versionCode = 1
        versionName = "1.0"

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            isMinifyEnabled = false
            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    buildFeatures {
        viewBinding = true
    }
}

dependencies {

    implementation(libs.appcompat)
    implementation(libs.material)
    implementation(libs.constraintlayout)
    implementation(libs.lifecycle.livedata.ktx)
    implementation(libs.lifecycle.viewmodel.ktx)
    implementation(libs.navigation.fragment)
    implementation(libs.navigation.ui)
    testImplementation(libs.junit)
    androidTestImplementation(libs.ext.junit)
    androidTestImplementation(libs.espresso.core)

    implementation("com.google.code.gson:gson:2.8.9")
    implementation("io.realm:realm-android-library:10.12.0")
////    implementation("org.xerial:sqlite-jdbc:3.45.3.0")
//    implementation("org.iq80.leveldb:leveldb:0.12")

}
